--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
     }
     animate();
   </script>
+   <div class="card center">
+  <h2>About me <a href="/java/index.html">Click here</a></h2>
+</div>
+
 </body>
 </html>
